# PhonoGlyphe

./: .gitignore  README.md  pyproject.toml
PhonoGlyphe/: __init__.py  architecture.py  config.json  tokenizers.json  utils.py
examples/: as_fallback.py  usage.py
training/: README.md  model.py  prepare.ipynb  train.ipynb
