[project]
name = "phonoglyphe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["phonoglyphe"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
]
